🔧 Fix map fullscreen error and update config for GitHub safety - Remove hardcoded API key from config.js - Fix fullscreenControl.addTo error in map initialization - Update env.example with proper template - Simplify chatbot UI and remove unnecessary elements - All changes are now safe for GitHub

--- a/index.html
+++ b/index.html
@@ -228,14 +228,13 @@
             </div>
         </section>
 
-        <!-- Sezione Formazione -->
+        <!-- Sezione Formazione AI -->
         <section id="formazione" class="content-section">
             <div class="section-header">
-                <h2><i class="fas fa-graduation-cap"></i> Formazione AI</h2>
-                <p>Assistente virtuale per tecniche, tattiche e consigli personalizzati</p>
+                <h2><i class="fas fa-graduation-cap"></i> Assistente AI Ugliano</h2>
+                <p>Esperto di pesca subacquea e apnea per la zona di Ugliano, Croazia</p>
             </div>
 
-            <!-- Chat AI -->
             <div class="ai-chat-container">
                 <div id="chatMessages" class="chat-messages">
                     <div class="ai-message">
@@ -243,34 +242,31 @@
                             <i class="fas fa-robot"></i>
                         </div>
                         <div class="message-content">
-                            <p>Ciao! Sono il tuo assistente per la pesca subacquea. Puoi chiedermi qualsiasi cosa su:</p>
-                            <ul>
-                                <li>🎯 Tecniche di pesca per ogni specie</li>
-                                <li>🏊‍♂️ Respirazione e apnea</li>
-                                <li>🔧 Setup e attrezzatura</li>
-                                <li>📍 Tattiche specifiche per ogni punto</li>
-                                <li>🌊 Lettura delle condizioni</li>
-                            </ul>
-                            <p>Fai la tua domanda!</p>
+                            <h4>🏊‍♂️ Ciao! Sono il tuo assistente AI per la pesca subacquea a Ugliano.</h4>
+                            <p>Posso aiutarti con tecniche, attrezzatura, tattiche e condizioni meteo. Fai una domanda!</p>
                         </div>
                     </div>
                 </div>
 
-                <!-- Quick Questions -->
+                <!-- Quick Questions - Semplificate -->
                 <div class="quick-questions">
-                    <h4>Domande Frequenti:</h4>
+                    <h4>Domande Rapide</h4>
                     <div class="quick-btn-grid">
                         <button class="quick-btn" data-question="Come migliorare l'apnea?">
-                            <i class="fas fa-lungs"></i> Apnea
+                            <i class="fas fa-lungs"></i>
+                            <span>Apnea</span>
                         </button>
-                        <button class="quick-btn" data-question="Migliore setup per dentici?">
-                            <i class="fas fa-crosshairs"></i> Setup Dentici
+                        <button class="quick-btn" data-question="Setup per dentici?">
+                            <i class="fas fa-crosshairs"></i>
+                            <span>Setup Dentici</span>
                         </button>
-                        <button class="quick-btn" data-question="Come pescare nelle grotte?">
-                            <i class="fas fa-cave"></i> Pesca Grotte
+                        <button class="quick-btn" data-question="Pesca nelle grotte?">
+                            <i class="fas fa-cave"></i>
+                            <span>Pesca Grotte</span>
                         </button>
-                        <button class="quick-btn" data-question="Leggere condizioni meteo?">
-                            <i class="fas fa-cloud"></i> Meteo
+                        <button class="quick-btn" data-question="Condizioni meteo?">
+                            <i class="fas fa-cloud"></i>
+                            <span>Meteo</span>
                         </button>
                     </div>
                 </div>
