--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
         <!-- Sezione Formazione AI -->
         <section id="formazione" class="content-section">
             <div class="section-header">
-                <h2><i class="fas fa-graduation-cap"></i> Assistente AI Ugliano</h2>
-                <p>Esperto di pesca subacquea e apnea per la zona di Ugliano, Croazia</p>
+                <h2><i class="fas fa-graduation-cap"></i> Diving Assistant </h2>
+                <p>Esperto di pesca subacquea e apnea</p>
             </div>
 
             <div class="ai-chat-container">
@@ -242,7 +242,7 @@
                             <i class="fas fa-robot"></i>
                         </div>
                         <div class="message-content">
-                            <h4>🏊‍♂️ Ciao! Sono il tuo assistente AI per la pesca subacquea a Ugliano.</h4>
+                            <h4>🏊‍♂️ Ciao! Sono il tuo assistente AI per la pesca subacquea.</h4>
                             <p>Posso aiutarti con tecniche, attrezzatura, tattiche e condizioni meteo. Fai una domanda!</p>
                         </div>
                     </div>
